# twoday-recruitment-case

./: .gitignore  CMakeLists.txt  README.md
include/: ExampleDataBroker.h  ExampleStorage.h  IParkingDataBroker.h  IParkingStorage.h  ParkingData.h  ParkingHouse.h  ParkingResults.h  ParkingSpotData.h
src/: ExampleDataBroker.cpp  ExampleStorage.cpp  ParkingHouse.cpp  main.cpp
test/: ExampleBrokerTests.cpp  ParkingDataTest.cpp  ParkingHouseTests.cpp  StorageTest.cpp  StorageTests.cpp
